--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Krishnaja Koonapra | Data Analyst" />
-    <meta name="twitter:description" content="Data Analyst with 4+ years of experience in Product & Growth Analytics." />
+    <meta name="twitter:title" content="Krishnaja Koonapra | Data Scientist" />
+    <meta name="twitter:description" content="Data Sceintist with 4+ years of experience in Product & Growth Analytics." />
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <link rel="canonical" href="https://krishnajak.com" />
