--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <meta name="twitter:description" content="Data Sceintist with 4+ years of experience in Product & Growth Analytics." />
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
-    <link rel="canonical" href="https://krishnajak.com" />
+    <link rel="canonical" href="https://id-preview--2e2adf25-2f7e-4936-8864-bd0af29fce85.lovable.app/" />
   </head>
 
   <body>
